--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:b5f379103775692fc194b36f922b93c23f6c65b8e8a341e00a8d9302196e925a"
+  "signature": "sha256:2df5a71e101a46db3bb0cbdc866a94ea09b099d28ca144df88a520c384e9189a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1902,7 +1902,7 @@
       }
      },
      "source": [
-      "Pros and cons of piecewise flat bootstrap\n",
+      "## Pros and cons of piecewise flat bootstrap\n",
       "\n",
       "* All benchmark prices are exactly matched, after bootstrap with piecewise flat hazard rate.\n",
       "* Discontinuity in hazard rate causes hedging problems, risk profiles jump over the roll dates."
@@ -2099,11 +2099,11 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "-"
+       "slide_type": "subslide"
       }
      },
      "source": [
-      "Tension spline interpolation is global:\n",
+      "## Tension spline interpolation is global\n",
       "\n",
       "* Changes in longer maturity affects the shorter end of the curve\n",
       "* The benchmark CDS won't reprice exactly after the bootstrapping"
