--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -630,7 +630,7 @@
      "source": [
       "## Rounding under IEEE754\n",
       "\n",
-      "Default rule: round to nearest to the true value, ties to even digit\n",
+      "Default rule: round to the nearest, ties to even digit\n",
       "* Example, rround to 4 significant digit: \n",
       " * $3.1245 \\rightarrow 3.124$\n",
       " * $43515 \\rightarrow 43520$ \n",
@@ -1505,9 +1505,22 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
-      "It should become your instinct to always use error bound when comparing floating numbers, or use integer comparison as the condition for ending loops."
+      "## Avoid equality test\n",
+      "\n",
+      "Equality test in floating point number is **always** a bad idea:\n",
+      "* Mathematical equality often fails floating point equality test because of rounding errors \n",
+      "* Often produce off-by-one number of loops when used to test end loop conditions\n",
+      "\n",
+      "It should become your instinct to:\n",
+      "* always use error bound when comparing floating numbers, such as ```numpy.allclose()``` \n",
+      "* try to use integer comparison as the end condition for loops\n",
+      "  * integer representation and arithmetic in IEEE 754 is exact"
      ]
     },
     {
@@ -1865,7 +1878,7 @@
       " * $k(f) \\rightarrow 0$ near $x = 0$, it is well-posed near $x = 0$.\n",
       "\n",
       "The numerical algorithm can be unstable even if the problem itself is well-posed.\n",
-      " * A better algorithm near $x=0$ is $f(x) = \\frac{2}{x^2}\\sin^2(\\frac{x}{2})$\n",
+      " * A better algorithm near $x=0$ is $f(x) = \\frac{2}{x^2}\\sin^2(\\frac{x}{2})$ \n",
       " \n",
       "But an ill-posed problem is always numerically unstable by definition.\n",
       "* Direct numerical calculation is unstable around $x = 2\\pi$\n",
