--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -1811,21 +1811,21 @@
       "## Condition number\n",
       "Consider the relative error of a function with multiple arguments: $f = f(x_1, ..., x_n)$:\n",
       "\n",
-      "\\begin{eqnarray} \n",
+      "$$\n",
       "\\small\n",
-      "df &=& \\sum_i \\frac{\\partial f}{\\partial x_i} dx_i \\\\\n",
-      "\\frac{df}{f} &=& \\sum_i \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\frac{dx_i}{x_i}\n",
-      "\\end{eqnarray}\n",
+      "df = \\sum_i \\frac{\\partial f}{\\partial x_i} dx_i \\iff\n",
+      "\\frac{df}{f} = \\sum_i \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\frac{dx_i}{x_i}\n",
+      "$$\n",
       "\n",
       "Assuming input argument's relative errors are $\\epsilon_i$ (could be negative):\n",
       "\n",
       "$$\n",
       "\\small\n",
       "\\left| \\frac{\\Delta f}{f} \\right| = \\left| \\sum_i \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\epsilon_i \\right|\n",
-      "\\le \\sum_i \\left| \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\right| \\left|\\epsilon_i\\right| \\le \\sum_i \\left| \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\right| \\epsilon \\equiv k(f) \\epsilon\n",
+      "\\le \\sum_i \\left| \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\right| \\left|\\epsilon_i\\right| \\le \\sum_i \\left| \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\right| \\epsilon_m \\equiv k(f) \\epsilon_m\n",
       "$$\n",
       "\n",
-      "where $\\epsilon$ is the maximum relative error of all inputs. \n",
+      "where $\\epsilon_m$ is the maximum relative error of all inputs. \n",
       "\n",
       "* $k(f) = \\sum_i \\left| \\frac{x_i}{f}\\frac{\\partial f}{\\partial x_i} \\right|$ is defined as the condition number of a function, \n",
       "* it is the maximum growth factor of the relative error.\n",
