--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -1944,6 +1944,27 @@
       }
      },
      "source": [
+      "## Rank deficiency and reduction\n",
+      "\n",
+      "Singular matrix are those that are not fully ranked\n",
+      "* Square matrix: non-invertible, its determinant is 0\n",
+      "* In practice, matrices are rarely exactly singular due to numerical errors\n",
+      "\n",
+      "SVD can detect near singular matrices\n",
+      "* near singular matrix has very small singular values\n",
+      "\n",
+      "SVD can find low rank approximations to a full rank matrix\n",
+      "* by zeroing out small singular values"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "## Condition number for EVD\n",
       "\n",
       "What is the change in $\\lambda_i$ if we perturb the symmetric matrix $A$? \n",
