--- a/Homework3.ipynb
+++ b/Homework3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c4b9aed2cc7686b5e6abd5ec7890f970691e518f5d7c3c66de615a4a56139cd"
+  "signature": "sha256:e0a6b58995fce0ebf0534e7cd35eb99e51b0c29086d6dcfe328ca5c753d1fec5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,16 +27,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -55,11 +46,11 @@
       "We discussed three different ways of solving the least square problem of $\\min_{\\boldsymbol \\beta}\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$ in the lecture: 1) the pseudo-inverse $X^+$ 2) QR decomposition 3) SVD. \n",
       "\n",
       "1. if $X$ is not fully ranked, i.e., its column vectors are linearly dependent, do the three methods still work?\n",
-      "2. if not, can you propose an modifications to the QR method, so that you can find $\\min_{\\boldsymbol \\beta}\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$ even when $X$ is rank deficient? Note that $\\bs \\beta$ is not unique when $X$ is not fully ranked, but there is still a deterministic answer to the minimum value of $\\min_{\\boldsymbol \\beta}\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$. \n",
+      "2. if not, can you propose an modifications to the QR method, so that you can find the minimum value of $\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$ even when $X$ is rank deficient? Note that $\\bs \\beta$ is not unique when $X$ is not fully ranked, but there is still a deterministic answer to the minimum value of $\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$. \n",
       "3. what is an easy and effective method to find a $\\bs \\beta$ that is good enough when $A$ is not fully ranked in practice?\n",
       "\n",
       "Hint:\n",
-      "- To make SVD work with rank deficient matrix is also possible, but more involved. Please refer to http://www.cs.cornell.edu/Courses/cs3220/2010sp/notes/svd.pdf if you are interested."
+      "- It is also possible to make SVD work with rank deficient matrix. Please refer to http://www.cs.cornell.edu/Courses/cs3220/2010sp/notes/svd.pdf if you are interested."
      ]
     },
     {
@@ -118,14 +109,16 @@
       "3. from your results, how many principal components are required to explain 95% of the variance of rate changes? \n",
       "4. Plot these principal components of the covariance matrix that account for 95% of the variance and try to give economic explanations of what mode of rates changes they represent.\n",
       "4. plot the history of PCA scores, i.e., the factor loading to the first 3 principal components, of the historical data.\n",
-      "4. [extra credit] write a program to simulate the daily interest rate **changes** up to the future time of 20Y using the first few principal components of the **changes** that accounted for 95% of the variance. From your simulated IR change paths, re-estimate the covariance matrix of the **changes**, then comapre it to the original covariance matrix estimated from historical data. (think of a suitable metric for the comparison). You can assume that the daily rates changes are independent normals, and there are 250 business days per year. \n",
-      "5. [extra credit] obtain the IR **levels** from the simulated paths of changes in step #4, and compute the following statistical metrics of the IR **level** distributions: mean, standard deviation, 2% and 98% quantiles. Plot the evolution of these statistical metrics over time for the 1Y and 10Y term rates. Make any reasonable assumptions on the starting interest rate term structure. Hint: the levels are the sum of the changes, numpy.cumsum is a useful function to compute cumulative sums.\n",
-      "6. [extra credit] From your simulated interest rates distribution metrics, comment on whether the simulated IR term structure looks reasonable, and what could be done to make the simulated IR term structure more realistic. Which is a more suitable choice, PCA on IR levels or changes? Does your answer depend on your application?\n",
+      "4. write a program to simulate the daily interest rate **changes** up to the future time of 20Y using the first few principal components of the **changes** that accounted for 95% of the variance. From your simulated IR change paths, re-estimate the covariance matrix of the **changes**, then comapre it to the original covariance matrix estimated from historical data. (think of a suitable metric for the comparison). You can assume that the daily rates changes are independent normals, and there are 250 business days per year. \n",
+      "5. obtain the IR **levels** from the simulated paths of changes in step #4, and compute the following statistical metrics of the IR **level** distributions: mean, standard deviation, 2% and 98% quantiles. Plot the evolution of these statistical metrics over time for the 1Y and 10Y term rates. Make any reasonable assumptions on the starting interest rate term structure. \n",
+      "6. [extra credit] Compute the 2% and 98% quantile of the historical 1Y and 10Y rate levels, and comment on if the simulated levels from the previous step matches the historical quantiles.\n",
+      "6. [extra credit] Comment on what could be done to make the simulated IR term structure more realistic. And which is a more suitable choice, PCA on IR levels or changes? Does your answer depend on your application?\n",
       "\n",
       "Hints:\n",
-      "* numpy has a build in random number generator package, numpy.random.\n",
+      "* numpy has a build in random number generator package, numpy.random. \n",
       "* cumsum, percentile are useful functions from numpy, you can use them to simplify your code\n",
-      "* for step 4, since the principal components are orthogonal, you can simply drive the change simulation using independent normal random numbers. Don't forget to take into account the eigen values in your simulation, i.e., the eigen values are the variance along the direction of the principal components. "
+      "* for step 4, since the principal components are orthogonal, you can simply drive the change simulation using independent normal random numbers. Don't forget to take into account the eigen values in your simulation, i.e., the eigen values are the variance along the direction of the principal components. \n",
+      "* for step 5, the levels are the sum of the changes, numpy.cumsum is a useful function to compute cumulative sums."
      ]
     }
    ],
