--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -461,6 +461,7 @@
      "source": [
       "## Expressivity\n",
       "\n",
+      "$$ $$\n",
       "\n",
       "<center>\n",
       "<img src=\"img/proglang.png\" width=500 height=500>\n",
@@ -527,7 +528,7 @@
       "* With the latest IPython, numpy/pandas/scipy etc.\n",
       "* either 32bit or 64bit version works\n",
       "\n",
-      "Pyton setup instructions:\n",
+      "Python setup instructions:\n",
       "\n",
       "* available at: http://yadongli.github.io/nyumath2048"
      ]
@@ -563,7 +564,8 @@
       "\n",
       "Both measure are useful in practice.\n",
       "\n",
-      "* Beware of small $|a|$ when comparing relative errors"
+      "* Beware of small $|a|$ when comparing relative errors\n",
+      "* Is the error normal or lognormal?"
      ]
     },
     {
@@ -631,7 +633,7 @@
       "## Rounding under IEEE754\n",
       "\n",
       "Default rule: round to the nearest, ties to even digit\n",
-      "* Example, rround to 4 significant digit: \n",
+      "* Example, round to 4 significant digit: \n",
       " * $3.1245 \\rightarrow 3.124$\n",
       " * $43515 \\rightarrow 43520$ \n",
       "* Addition and multiplication are commutative with rounding, but not associative\n",
