--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -314,7 +314,7 @@
       "* eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
       "  * there are still ambuiguity between  $\\bs v$ and $- \\bs v$ \n",
       "* eigenvalues are named in descending order: $\\lambda_1 \\ge \\lambda_2 \\ge ... \\ge \\lambda_n $, their corresponding eigen vectors are $\\bs {v_1, v_2, ..., v_n}$ \n",
-      "  * can eigenvalues be negative?"
+      "  * can eigenvalues be negative? Yes, otherwise the matrix is positive definite."
      ]
     },
     {
@@ -433,8 +433,17 @@
       "\\end{array}$$\n",
       "\n",
       "* the solution must be an eigenvector \n",
-      "* since $\\bs v_i^T A \\bs v_i = \\lambda_i$, $\\bs v_1$ is the solution because $\\lambda_1$ is the largest\n",
-      "\n",
+      "* since $\\bs v_i^T A \\bs v_i = \\lambda_i$, $\\bs v_1$ is the solution because $\\lambda_1$ is the largest"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "This process can be repeated to find all eigenvalues and vectors:\n",
       "\n",
       "* $\\bs v_2$ maximizes $\\bs u^T A \\bs u$ for all unit $\\bs u$ that is orthogonal to $\\bs v_1$, i.e, $\\bs u^T \\bs v_1 = 0$.\n",
