--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:f9052136f5aae413c233a2e6dde445cc0007b3dd51912ce55feecd3cd40dfea3"
+  "signature": "sha256:5f3ea68def8ef7c01fec95039c3c356c9c995e13f5fe97fe1823ca561e92321e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -113,7 +113,8 @@
       "* column vector: $\\bs {u, v, x, \\beta}$ \n",
       "* row vector: $\\bs u^T, \\bs v^T, \\bs x^T, \\bs \\beta^T$\n",
       "* scalar: $a, b, \\alpha, \\beta$ \n",
-      "* matrix: $A, B, P$"
+      "* matrix: $A, B, P$\n",
+      "* random variables: $\\tilde a, \\tilde{\\bs u}, \\tilde{\\bs v}^T$"
      ]
     },
     {
@@ -596,7 +597,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "subslide"
       }
      },
      "outputs": [
@@ -617,11 +618,13 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "source": [
-      "* The LU factorization is the matrix representation of Gaussian elimination"
+      "* The LU factorization is the matrix representation of Gaussian elimination\n",
+      "* LU factorization can be used to compute matrix inversion\n",
+      "  * trianglular matrix is easy to invert (simply substitute known variables)"
      ]
     },
     {
@@ -725,35 +728,17 @@
       "* binary search $O(\\log(n))$\n",
       "* best sorting algorithm: $O(n \\log(n))$\n",
       "\n",
-      "Most numerical linear algebra algorithm is of complexity of $O(n^3)$\n",
-      "* e.g.: the LU decomposition (why?)"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "Cholesky Decomposition"
+      "Most common numerical linear algebra algorithm is of complexity of $O(n^3)$\n",
+      "* the LU decomposition, iterate through the $n$ diagonal elements, to zero-out each column using a diagonal element cost $O(n^2)$"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
+     "metadata": {},
      "source": [
-      "## Symmetric positive definite Matrix\n",
+      "## Cholesky Decomposition\n",
       "\n",
-      "* $V$ is positive definite if $\\bs x^T V \\bs x > 0$ for $\\forall \\bs{x \\ne 0}$\n",
-      "* $V$ is semi positive definite if $\\bs x^T V \\bs {x \\ge 0}$ for $\\forall \\bs{x \\ne 0}$\n",
-      "* Semi-positive definite does not mean every element in the matrix is positive"
+      "aka Cholesky Factorization"
      ]
     },
     {
@@ -795,7 +780,22 @@
       "\n",
       "* $C = (\\rho_{ij})$ is the co-variance matrix of the normalized factors $\\bs {\\tilde s} = [\\frac{r_1}{\\sigma_1}, ..., \\frac{r_n}{\\sigma_n}]^T$\n",
       "* $V = \\Sigma C \\Sigma $, where $\\Sigma$ is a diagonal matrix of $\\sigma_i$\n",
-      "* all elements in a correlation matrix are within [-1, 1]\n",
+      "* all elements in a correlation matrix are within [-1, 1]"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Symmetric positive definite Matrix\n",
+      "\n",
+      "* $A$ is positive definite if $\\bs x^T A \\bs x > 0$ for $\\forall \\bs{x \\ne 0}$\n",
+      "* $A$ is semi positive definite if $\\bs x^T A \\bs {x \\ge 0}$ for $\\forall \\bs{x \\ne 0}$\n",
+      "* Semi-positive definite does not mean every element in the matrix is positive\n",
       "\n",
       "Both covariance and correlation matrices are symmetric positive semi-definate (SPD):\n",
       "\n",
@@ -1125,11 +1125,7 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
+     "metadata": {},
      "source": [
       "## Correlated Brownian motion\n",
       "\n",
@@ -1138,16 +1134,35 @@
       "* The common underlying process for asset prices and other risk factors\n",
       "* The vast matjority of quant finance models are based on Brownian motions.\n",
       "\n",
-      "Example: drawing correlated n-dimensional Geometric Brownian motion paths:\n",
+      "Example: drawing correlated n-dimensional Geometric Brownian motion:\n",
       "\n",
       "$$\n",
       "\\frac{dx^k_t}{x^k_t} = u^k dt + \\sigma^k dw^k_t, \n",
       "\\;\\;\\;\\;dw_t^j\\cdot dw_t^k = \\rho_{jk} dt\n",
       "$$\n",
       "\n",
-      "1. compute the Cholesky decomposition of the correlation matrix: $C = LL^T$\n",
-      "2. draw a n independent normal random number vector $\\bs \\epsilon = (\\epsilon_1, \\epsilon_2, ..., \\epsilon_n)^T$, these are the normalized risk factors\n",
-      "3. $L\\bs \\epsilon$ is the correlated normal random vector, and the correlated Brownian increments is therefore $dw_t = L\\bs \\epsilon\\sqrt{dt}$\n"
+      "In vector form:\n",
+      "$$ d \\bs x = X \\bs u dt + X \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
+      "\n",
+      "where $X$ is a diagonal matrix of $x_i$, and $\\Sigma$ is a diagonal matrix of $\\sigma_i$ and $C$ is the correlation matrix of $\\rho_{ij}$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Draw correlated Brownian\n",
+      "\n",
+      "Draw discretized version of $\\delta \\bs w \\approx L \\bs z \\sqrt{\\delta t}$\n",
+      "* where $\\bs z$ is a vector of independent standard normal random variables: $\\mathbb{E}[\\bs z \\bs z^T] = I$\n",
+      "* $L$ is the Cholesky decomposition of the correlaiton matrix $C = LL^T$\n",
+      "\n",
+      "$\\delta d \\bs w$ have the desired correlation:\n",
+      "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = C \\delta t$$"
      ]
     },
     {
@@ -1302,18 +1317,6 @@
       }
      ],
      "prompt_number": 18
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "source": [
-      "The resulting covariance (correlation) is: \n",
-      "$$\\mathbb{E}[L\\bs \\epsilon  (L\\bs \\epsilon)^T] = \\mathbb{E}[L\\bs{\\epsilon  \\epsilon}^T L^T] = LL^T = C$$"
-     ]
     },
     {
      "cell_type": "markdown",
