--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:5f3ea68def8ef7c01fec95039c3c356c9c995e13f5fe97fe1823ca561e92321e"
+  "signature": "sha256:102f17fd789947217fb344b863aac6bb3083354c2b97d8f5fd88c63118978030"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -734,7 +734,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "## Cholesky Decomposition\n",
       "\n",
@@ -799,6 +803,7 @@
       "\n",
       "Both covariance and correlation matrices are symmetric positive semi-definate (SPD):\n",
       "\n",
+      "* $\\bs x^T V \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde r},\\bs x^T \\bs {\\tilde r}] = \\text{var}[\\bs x^T \\bs {\\tilde r}] \\ge 0$\n",
       "* $\\bs x^T C \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde s},\\bs x^T \\bs {\\tilde s}] = \\text{var}[\\bs x^T \\bs {\\tilde s}] \\ge 0$"
      ]
     },
@@ -1125,7 +1130,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "## Correlated Brownian motion\n",
       "\n",
@@ -1158,11 +1167,12 @@
       "## Draw correlated Brownian\n",
       "\n",
       "Draw discretized version of $\\delta \\bs w \\approx L \\bs z \\sqrt{\\delta t}$\n",
-      "* where $\\bs z$ is a vector of independent standard normal random variables: $\\mathbb{E}[\\bs z \\bs z^T] = I$\n",
+      "* where $\\bs z$ is a vector of independent standard normal random variables\n",
+      "  * $\\mathbb{E}[\\bs z] = \\bs 1$, $\\mathbb{E}[\\bs z \\bs z^T] = I$ \n",
       "* $L$ is the Cholesky decomposition of the correlaiton matrix $C = LL^T$\n",
       "\n",
-      "$\\delta d \\bs w$ have the desired correlation:\n",
-      "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = C \\delta t$$"
+      "$\\delta \\bs w$ have the desired correlation:\n",
+      "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$"
      ]
     },
     {
