--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:102f17fd789947217fb344b863aac6bb3083354c2b97d8f5fd88c63118978030"
+  "signature": "sha256:2490067a4a22ab033d70809fc31627fef44192f2a879cbf1ddcbeb54a2bdf336"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1172,7 +1172,10 @@
       "* $L$ is the Cholesky decomposition of the correlaiton matrix $C = LL^T$\n",
       "\n",
       "$\\delta \\bs w$ have the desired correlation:\n",
-      "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$"
+      "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$\n",
+      "\n",
+      "It is equivalent to use Cholesky decomposition on the covariance matrix:\n",
+      "$$ C = LL^T \\iff V = \\Sigma C \\Sigma = L\\Sigma (L\\Sigma)^T $$"
      ]
     },
     {
