--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:2490067a4a22ab033d70809fc31627fef44192f2a879cbf1ddcbeb54a2bdf336"
+  "signature": "sha256:bc283dd5f294f0af69966303d53338886fc70a73d80b055c15b6f1edbd9e590e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -276,7 +276,7 @@
       " * $\\alpha (A+B) = \\alpha A + \\alpha B$\n",
       "* But **not** commutative: $AB \\ne BA$\n",
       "\n",
-      "$\\renewcommand{id}{\\bs{I}}$"
+      "$\\renewcommand{id}{I}$"
      ]
     },
     {
@@ -1174,7 +1174,7 @@
       "$\\delta \\bs w$ have the desired correlation:\n",
       "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$\n",
       "\n",
-      "It is equivalent to use Cholesky decomposition on the covariance matrix:\n",
+      "Equivalently, Cholesky decomposition on the covariance matrix (note $\\Sigma$ is diagonal):\n",
       "$$ C = LL^T \\iff V = \\Sigma C \\Sigma = L\\Sigma (L\\Sigma)^T $$"
      ]
     },
@@ -1415,18 +1415,19 @@
       "\n",
       "* $A, a, b, \\bs c$ are constants (ie, not functions of $\\bs x$)\n",
       "* $\\bs {u=u(x), v=v(x)}, y=y(\\bs x)$ are functions of $\\bs x$\n",
+      "* $O$ is the zero matrix\n",
       "\n",
       "$\\renewcommand{p}{\\partial}$\n",
       "\n",
       "| Expression | Results | Special Cases |\n",
       "| :------: | :-----: | :-----: |\n",
-      "| $\\frac{\\p(a \\bs u + b \\bs v)}{\\p \\bs x}$ |  $a \\frac{\\p{\\bs u}}{\\p \\bs x} + b\\frac{\\p{\\bs v}}{\\p \\bs x}$ |$\\frac{\\p{\\bs c}}{\\p \\bs x} = \\bs{0}, \\frac{\\p{\\bs x}}{\\p \\bs x} = \\id$ |\n",
+      "| $\\frac{\\p(a \\bs u + b \\bs v)}{\\p \\bs x}$ |  $a \\frac{\\p{\\bs u}}{\\p \\bs x} + b\\frac{\\p{\\bs v}}{\\p \\bs x}$ |$\\frac{\\p{\\bs c}}{\\p \\bs x} = O, \\frac{\\p{\\bs x}}{\\p \\bs x} = \\id$ |\n",
       "| $\\frac{\\p{A \\bs u}}{\\p \\bs x}$ |  $A\\frac{\\p{\\bs u}}{\\p \\bs x}$ | $\\frac{\\p{\\bs A x}}{\\p \\bs x} = A, \\frac{\\p{\\bs x^T A}}{\\p \\bs x} = A^T$ |\n",
       "| $\\frac{\\p{y \\bs u}}{\\p \\bs x}$ |  $y \\frac{\\p{\\bs u}}{\\p \\bs x} + \\bs u \\frac{\\p{y}}{\\p \\bs x}$ | - |\n",
       "| $\\frac{\\p \\bs{u}^T A \\bs v}{\\p \\bs x} $ |  $\\bs u^T A \\frac{\\p{\\bs v}}{\\p \\bs x}  +  \\bs v^T A^T \\frac{\\p{\\bs u}}{\\p \\bs x} $ |$\\frac{\\p \\bs{x}^T A \\bs x}{\\p \\bs x} = (A + A^T) \\bs x$, $\\frac{\\p \\bs{u^Tv}}{\\p \\bs x} =\\bs{u}^T\\frac{\\p \\bs{v}}{\\p \\bs x} + \\bs{v}^T\\frac{\\p \\bs{u}}{\\p \\bs x}$ |\n",
       "| $\\frac{\\p{\\bs g(\\bs u})}{\\p \\bs x}$ |  $\\frac{\\p{\\bs g}}{\\p \\bs u} \\frac{\\p{\\bs u}}{\\p \\bs x} $ | chain rules of multiple steps,  $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$  |\n",
       "\n",
-      "* Very similar expressions to  univariate calculus.\n",
+      "* Similar to  univariate calculus, but very succinct\n",
       "* Replace $A^T$ by $A^*$ for complex matrix"
      ]
     },
@@ -1585,7 +1586,7 @@
       "\n",
       "Beta to a benchmark portfolio: $\\bs f \\propto \\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
       "\n",
-      "* $\\bs{\\beta_b w} = 1$ means the portfolio has a beta of 1 to the benchmark portfolio $\\bs w_b$\n",
+      "* $\\bs \\beta_b^T \\bs w_b = 1$ means the portfolio has a beta of 1 to the benchmark portfolio $\\bs w_b$\n",
       "* $\\bs w_{\\beta} = \\frac{V^{-1}\\bs \\beta_b}{\\bs \\beta_b^T V^{-1}\\bs \\beta_b} = \\frac{\\bs w_b}{\\bs{\\beta_b^T w_b}} = \\bs w_b$, which is the benchmark portfolio itself\n",
       "* the benchmark portfolio itself is the optimal portfolio amongst those with unit beta."
      ]
@@ -1600,7 +1601,7 @@
      "source": [
       "## Portfolio optimization example\n",
       "\n",
-      "Given the following covariance matrix estimates and excess return forcasts:"
+      "Given the following covariance matrix estimates and excess return forecasts:"
      ]
     },
     {
@@ -1752,7 +1753,7 @@
      "source": [
       "## Efficient Frontier\n",
       "\n",
-      "The simulated sharp ratios of all $1 portfolios:\n",
+      "The simulated sharp ratios of all $1 portfolios fully invested in risky assets:\n",
       "* the optimal portfolio O has the optimal Sharp Ratio\n",
       "* the min Variance portfolio C has the smallest variance"
      ]
