--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:bc283dd5f294f0af69966303d53338886fc70a73d80b055c15b6f1edbd9e590e"
+  "signature": "sha256:470b130d54819c040cd6046366b22b9c769c61bd86a1fdff31f8ccb10100ad81"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1174,7 +1174,8 @@
       "$\\delta \\bs w$ have the desired correlation:\n",
       "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$\n",
       "\n",
-      "Equivalently, Cholesky decomposition on the covariance matrix (note $\\Sigma$ is diagonal):\n",
+      "Equivalently, we can draw $\\Sigma \\delta \\bs w \\approx (\\Sigma L) \\bs z\\sqrt{\\delta t}$, where\n",
+      "* $\\Sigma L$ is the Cholesky decomposition of the covariance matrix\n",
       "$$ C = LL^T \\iff V = \\Sigma C \\Sigma = L\\Sigma (L\\Sigma)^T $$"
      ]
     },
