--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:470b130d54819c040cd6046366b22b9c769c61bd86a1fdff31f8ccb10100ad81"
+  "signature": "sha256:ae96b36752e147483259f440cc9b9ead975bbcea199aacc9a96441b554752ea0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1342,17 +1342,16 @@
      "source": [
       "## Big correlation/covariance matrices\n",
       "\n",
-      "The covariance/correlation matrix are extremely useful, but they are difficult to deal with when their size grows large:\n",
       "\n",
-      "* In practice, we often deal with thousands or tens of thousands risk factors\n",
-      "* Correlation matrix is often easier to work with than the covariance matrix, because it is \"normalized\"\n",
-      "* It is very difficult to keep a large correlation matrix semi positive definite (SPD)\n",
-      " * Correlation matrix size of a few thousands is the practical limit\n",
-      " * Small changes in isolated values can invalidate the whole correlation matrix\n",
-      " * Adding new entries to a large correlation matrix can be extremely hard\n",
-      "* Cholesky decomposition often fails for large matrices due to non-SPD or numerical noise.\n",
+      "In practice, we work with thousands of risk factors\n",
+      "* Correlation matrix is easier to maintain than the covariance matrix, because it is \"normalized\"\n",
       "\n",
-      "Dimensionality reduction is often required when dealing with large number of factors."
+      "Very difficult to keep large correlation matrices semi positive definite (SPD)\n",
+      " * Size of a few thousands is the practical limit\n",
+      " * Small changes in few values can invalidate the whole matrix\n",
+      " * Adding new entries can be extremely difficult\n",
+      "\n",
+      "Dimensionality reduction is required when dealing with very large number of factors."
      ]
     },
     {
@@ -1381,7 +1380,7 @@
       "$$f(\\bs x) = f(x_1, ..., x_n)$$\n",
       "\n",
       "* Derivative to vector (Gradient): $\\frac{\\partial f}{\\partial \\bs x} = \\nabla f = [\\frac{\\partial f}{\\partial x_1}, ..., \\frac{\\partial f}{\\partial x_n}]$\n",
-      "* Note that $\\frac{\\partial f}{\\partial \\bs x}$ is a **row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed.\n",
+      "* Note that $\\frac{\\partial f}{\\partial \\bs x}$ is **always a row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed.\n",
       "* Some time we use the notation: $\\frac{\\partial f}{\\partial \\bs x^T} = \\left(\\frac{\\partial f}{\\partial \\bs x}\\right)^T $ to denote a column vector."
      ]
     },
@@ -1399,7 +1398,8 @@
       "\n",
       "* Deriative to vector (Jacobian matrix): $\\frac{\\partial \\bs y}{\\partial \\bs x} = \\left[\\frac{\\partial{y_1}}{\\partial \\bs x}, \\frac{\\partial{y_2}}{\\partial \\bs x}, \\cdots, \\frac{\\partial{y_n}}{\\partial \\bs x} \\right]^T$\n",
       " *  $\\frac{\\partial \\bs y}{\\partial \\bs x}$ is a matrix of $\\bs y$ rows and $\\bs x$ columns\n",
-      " * $\\frac{\\partial \\bs y}{\\partial \\bs x}\\frac{\\partial \\bs x}{\\partial \\bs y} = \\id$, even when $\\bs x$ and $\\bs y$ are of different dimension. \n",
+      " * $\\frac{\\partial \\bs y}{\\partial \\bs x}\\frac{\\partial \\bs x}{\\partial \\bs y} = \\id$, even when $\\bs x$ and $\\bs y$ are of different dimension.\n",
+      " * sometime we use the following notation:  $\\frac{\\partial \\bs y}{\\partial \\bs x^T} =  \\left(\\frac{\\partial \\bs y}{\\partial \\bs x}\\right)^T$\n",
       "* Derivative to scalar: $\\frac{\\partial \\bs y}{\\partial z} = [\\frac{\\partial y_1}{\\partial z}, \\cdots, \\frac{\\partial y_n}{\\partial z}]^T$\n",
       " * remains a column vector"
      ]
